--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Word Square</title>
+        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/747/747552.png">
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!-- JavaScript Bundle with Popper -->
@@ -453,6 +454,7 @@
           P  E  N  T<br/>
         </div>
         <span style="font-size:30px;">See you tomorrow</span><br/>
+        <span style="font-size:13px;">Created by bored engineer 😩 &nbsp;Aritra Nirmal</span><br/>
       </div>
     </div>
   </div>
