--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
           A  M  E  N<br/>
           P  E  N  T<br/>
         </div>
-        <span style="font-size:30px;">See you tomorrow</span><br/>
+        <span style="font-size:30px;">Guess today's word square!</span><br/>
         <span style="font-size:13px;">Created by bored engineer 😩 &nbsp;Aritra Nirmal</span><br/>
       </div>
     </div>
