--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
 
         .game_box {
-            width:430px;
+            width: 430px;
             margin-left:auto;
             margin-right:auto;
         }
@@ -290,6 +290,7 @@
         </div>
        <br/>
        <div id="attempts_box" class="container">
+        <div style="font-size:20px; text-align: center;" onclick="gameinfo()">How to play</div>
            <div id="attempts" class="row">
                
            </div>
@@ -431,10 +432,9 @@
       <div class="modal-content" style="font-size:24px; font-weight:bold; text-align:center">
         <div class="modal-body">
         <span style="font-size:50px;">Answer</span><br/>
-          T  R  A  P<br/>
-          R  O  M  E<br/>
-          A  M  E  N<br/>
-          P  E  N  T<br/>
+          <span id="today_answer">
+
+          </span>
         </div>
         <span style="font-size:30px;">See you tomorrow</span><br/>
       </div>
@@ -747,6 +747,7 @@
         }
 
         function gameover() {
+            addAnswer();
             let myModal = new bootstrap.Modal(document.getElementById('gameover'), {});
             myModal.show();
         }
@@ -790,8 +791,21 @@
 
         }
 
-        pickTodayAnswer();
+        function addAnswer(){
+            var today_answer = document.getElementById("today_answer");
+            var str = "";
+            answer.forEach(ans=>{
+                ans.split("").forEach(l=>{
+                    console.log(l)
+                    str += l.toUpperCase();
+                    str += "&nbsp; &nbsp; ";
+                })
+                str += "<br/>";
+            });
+            today_answer.innerHTML = str;
+        }
 
+        pickTodayAnswer();
         gameinfo();
         selectRows(1);
     </script>
