--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Word Square</title>
+        <meta name="viewport" content="initial-scale=0.85, maximum-scale=1.0, user-scalable=no" />
         <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/747/747552.png">
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -12,6 +13,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Patua+One&display=swap" rel="stylesheet">
     </head>
     <style>
+        body{
+            padding:5px;
+        }
         .cell {
             border-style:solid;
             border-color:lightgray;
@@ -284,7 +288,7 @@
         <br/>
         <div class="container">
             <div class="row justify-content-md-center title" style="margin-top:-20px; font-family: 'Patua One', cursive;line-height: 3rem;">
-                <div class="col col-sm-2" style="padding-bottom:5px;font-size:2rem; border-color:black">WordSquare</div>
+                <div class="col col-sm-2" style="text-align:cennter; padding-bottom:5px;font-size:2rem; border-color:black">WordSquare</div>
                 <hr/>
             </div>
         </div>
