--- a/index.html
+++ b/index.html
@@ -565,19 +565,23 @@
 
     <!-- Modal -->
     <div class="modal fade" id="gameover" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content" style="font-size:24px; text-align:center; font-weight:bold;">
                 <div class="modal-body">
                     <div style="font-size:50px;">Answer</div><br/>
                     <div id="today_answer"></div><br/>
                     <div style="font-size:30px;">See you tomorrow</div><br/>
+                    <div class="col">
+                        <button style="width:100px; height:50px; font-size:16px;" onclick="createShareResult()" class="btn btn-success">Share</button>
+                    </div>
+                    <br/>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="modal fade" id="gameinfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content" style="font-size:14px; font-weight:bold;">
                 <div class="modal-body">
                     <span style="font-size:30px;">How to play</span><br/> Every day there is a new word square. You have <b>four</b> attempts to complete the word square.<br/><br/> Here is an example word square: <br/> T R A P<br/> R O M E<br/> A M E
@@ -675,12 +679,25 @@
         </div>
     </div>
     <div class="modal fade" id="gamewon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content" style="font-size:16px; font-weight:bold; text-align:center">
                 <div class="modal-body">
-                    <span style="font-size:50px;">Great job!</span><br/>
+                    <span style="font-size:50px;">Great job 👏</span><br/>
+                    <span style="font-size:20px;">See you tomorrow!</span><br/>
                 </div>
-                <span style="font-size:30px;">See you tomorrow</span><br/>
+                <div class="col">
+                    <button style="width:100px; height:50px; font-size:16px;" onclick="createShareResult()" class="btn btn-success">Share</button>
+                </div>
+                <br/>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="copydone" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" style="font-size:12px; color:white; background-color: black; font-weight:bold; text-align:center">
+                <div class="modal-body">
+                    <span style="font-size:15px;">Copied results to clipboard</span><br/>
+                </div>
             </div>
         </div>
     </div>
@@ -885,8 +902,11 @@
         }
     }
 
+    let all_res = [];
+
     function evaluateAnswer() {
         if (winner) {
+            gamewon();
             return;
         }
         if (attempts_left == 0) {
@@ -946,6 +966,7 @@
                 }
             });
         });
+        all_res.push(res);
         createAttempt(res);
         attempts_left -= 1;
         if (won == 0) {
@@ -1048,6 +1069,12 @@
         myModal.show();
     }
 
+    function copydone() {
+        winner = true;
+        let myModal = new bootstrap.Modal(document.getElementById('copydone'), {});
+        myModal.show();
+    }
+
     let winner = false;
     let attempts_left = 4;
     // let res = [
@@ -1056,6 +1083,10 @@
     //     [1, 2, 1, 1],
     //     [0, 0, 2, 1]
     // ];
+    // all_res.push(res);
+    // all_res.push(res);
+    // all_res.push(res);
+    // all_res.push(res);
     // createAttempt(res);
     // createAttempt(res);
     // createAttempt(res);
@@ -1096,8 +1127,102 @@
         today_answer.innerHTML = str;
     }
 
+    function createShareResult() {
+        const correct = "🟩";
+        const wrong = "⬜";
+        const maybe = "🟨";
+        var str = "";
+
+        for (var i = 0; i < all_res.length; i++) {
+            for (var j = 0; j < all_res[i].length; j++) {
+                var ans = all_res[i][j][0];
+                if (ans == 1) {
+                    str += correct + " ";
+                } else if (ans == 2) {
+                    str += maybe + " ";
+                } else {
+                    str += wrong + " ";
+                }
+            }
+            str += "   ";
+        }
+        str += "\r\n";
+
+        for (var i = 0; i < all_res.length; i++) {
+            for (var j = 0; j < all_res[i].length; j++) {
+                var ans = all_res[i][j][1];
+                if (ans == 1) {
+                    str += correct + " ";
+                } else if (ans == 2) {
+                    str += maybe + " ";
+                } else {
+                    str += wrong + " ";
+                }
+            }
+            str += "   ";
+        }
+
+        str += "\r\n";
+
+        for (var i = 0; i < all_res.length; i++) {
+            for (var j = 0; j < all_res[i].length; j++) {
+                var ans = all_res[i][j][2];
+                if (ans == 1) {
+                    str += correct + " ";
+                } else if (ans == 2) {
+                    str += maybe + " ";
+                } else {
+                    str += wrong + " ";
+                }
+            }
+            str += "   ";
+        }
+
+        str += "\r\n";
+
+        for (var i = 0; i < all_res.length; i++) {
+            for (var j = 0; j < all_res[i].length; j++) {
+                var ans = all_res[i][j][3];
+                if (ans == 1) {
+                    str += correct + " ";
+                } else if (ans == 2) {
+                    str += maybe + " ";
+                } else {
+                    str += wrong + " ";
+                }
+            }
+            str += "   ";
+        }
+
+        str += "\r\n";
+        str += "Play at https://wordsquare.app";
+
+        // all_res.forEach(res => {
+        //     res.forEach(cur_res => {
+        //         cur_res.forEach(i => {
+        //             if (i == 1) {
+        //                 str += correct + " ";
+        //             } else if (i == 2) {
+        //                 str += maybe + " ";
+        //             } else {
+        //                 str += wrong + " ";
+        //             }
+        //         });
+        //         str += "\r\n";
+        //     });
+        //     str += "\r\n";
+        //     str += "\r\n";
+        // });
+        navigator.clipboard.writeText(str);
+        copydone();
+    }
+
     pickTodayAnswer();
-    // gameinfo();
+    // createShareResult();
+    gameinfo();
+    // gameover();
+    // gamewon();
+    // copydone();
     selectRows(1);
 </script>
 
