--- a/index.html
+++ b/index.html
@@ -1212,10 +1212,10 @@
         ["bill", "idea", "lead", "lady"],
         ["know", "none", "once", "week"],
         ["crab", "rare", "arts", "best"],
-        ["what", "here", "area", "team"],
         ["plus", "line", "unit", "sets"],
         ["wife", "idea", "fees", "easy"],
-        ["thus", "hope", "upon", "send"]
+        ["thus", "hope", "upon", "send"],
+        ["what", "here", "area", "team"],
 
 
     ];
